@@ -3,33 +3,36 @@
 		<area x="0" y="0" width="100%" height="100%" layer="1">
 			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNG" />
 			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
-			<drawrectangle  x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />
+			<drawrectangle condition="gt({00_numRecordingsmenuitems}, 4)" x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />
 		</area>
-		<area x="0" y="0" width="100%" height="100%" layer="2">
-			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />          
+		<area condition="gt({00_numRecordingsmenuitems}, 4)" x="0" y="0" width="100%" height="100%" layer="2">
+			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />
+		</area>
+		<area condition="eq({00_numRecordingsmenuitems}, 4)" x="0" y="0" width="100%" height="100%" layer="2">
+			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuDefault" />           
 		</area>
 		<area x="0" y="0" width="100%" height="11%" layer="2">
-			<drawimage  x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />           
+			<drawimage x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />
 		</area>
 	</background>
 
-	<menuitems x="0" y="14%" orientation="vertical" width="100%" height="75%" align="center" numlistelements="{numShortSubmenuitems}">      
+	<menuitems x="0" y="14%" orientation="vertical" width="100%" height="75%" align="center" numlistelements="{00_numRecordingsmenuitems}">
 		<listelement>
-			<area  condition="not{02_showRecordingTime}" x="50%" width="45%" layer="3">
+			<area condition="not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="50%" width="45%" layer="3">
 				<drawimage condition="not{current}" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 2)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Gradient"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 1)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Color"/>
-				<drawimage  condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
-				<drawimage  condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
+				<drawimage condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
+				<drawimage condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="47" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
 			</area>
-			<area condition="not{folder}" x="41%" width="7%" layer="3">
+			<area condition="not{folder}++gt({00_numRecordingsmenuitems}, 4)" x="41%" width="7%" layer="3">
 				<drawtext x="5%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{printf('%02d.%02d.%d', daynumeric, month, year)}" />
 			</area>
-			<area condition="not{folder}++not{02_showRecordingTime}" x="48%" width="6%" layer="3">
+			<area condition="not{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="48%" width="6%" layer="3">
 				<drawtext x="15%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{durationhours}:{durationminutes} " />
 			</area>
-			<area  condition="not{folder}++not{02_showRecordingTime}" x="53%" width="2%" layer="4">
+			<area condition="not{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="53%" width="2%" layer="4">
 				<drawimage condition="{new}++not{cutted}++eq({03_newNotCutted-recordingsMarker}, 1)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="blueMarker" />
 				<drawimage condition="{new}++not{cutted}++eq({03_newNotCutted-recordingsMarker}, 2)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="darkGrayMarker" />
 				<drawimage condition="{new}++not{cutted}++eq({03_newNotCutted-recordingsMarker}, 3)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="green_blueMarker" />
@@ -91,31 +94,31 @@
 				<drawimage condition="not{new}++{watched}++{cutted}++eq({08_notNewWatchedCutted-recordingsMarker}, 9)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="yellowMarker" />
 			</area>
 
-			<areascroll condition="not{folder}++not{02_showRecordingTime}" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="54%" width="40%" layer="4">
+			<areascroll condition="not{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="54%" width="40%" layer="4">
 				<drawtext x="3%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
-			<area condition="{folder}++not{02_showRecordingTime}" x="40%" width="8%" layer="3">
+			<area condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="40%" width="8%" layer="3">
 				<drawimage name="foldericon" imagetype="icon" path="ico_recfolder" x="0" width="{areawidth}" height="{areaheight}" valign="center" align="center"/>
 			</area>
-			<areascroll  condition="{folder}++not{02_showRecordingTime}" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="54%" width="40%" layer="4">
+			<areascroll condition="{folder}++not{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="54%" width="40%" layer="4">
 				<drawtext x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
 <!--recordingtime-->
-			<area condition="{02_showRecordingTime}" x="55%" width="40%" layer="3">
+			<area condition="{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="55%" width="40%" layer="3">
 				<drawimage condition="not{current}" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons},0)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 2)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Gradient"/>
 				<drawimage condition="{current}++eq({coloredButtons},1)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Color"/>
-				<drawimage  condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
-				<drawimage  condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
+				<drawimage condition="not{folder}++{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBar" />
+				<drawimage condition="not{folder}++not{coloredElapsed}++{01_seenProgress}" x="42" y="{areaheight}-3" width="{areawidth}*{percentseen}/100" height="{areaheight}/20" imagetype="skinpart" path="elapsedBarMono" />
 			</area>
-			<area condition="not{folder}++{02_showRecordingTime}" x="49%" width="5%" layer="3">
+			<area condition="not{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="49%" width="5%" layer="3">
 					<drawtext x="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{time}" />
 			</area>
-			<area condition="not{folder}++{02_showRecordingTime}" x="53%" width="5%" layer="3">
+			<area condition="not{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="53%" width="5%" layer="3">
 				<drawtext x="10%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{duration}" />
 			</area>
-			<area  condition="{02_showRecordingTime}++not{folder}" x="57%" width="2%" layer="4">
+			<area condition="{02_showRecordingTime}++not{folder}++gt({00_numRecordingsmenuitems}, 4)" x="57%" width="2%" layer="4">
 				<drawimage condition="{new}++not{cutted}++eq({03_newNotCutted-recordingsMarker}, 1)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="blueMarker" />
 				<drawimage condition="{new}++not{cutted}++eq({03_newNotCutted-recordingsMarker}, 2)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="darkGrayMarker" />
 				<drawimage condition="{new}++not{cutted}++eq({03_newNotCutted-recordingsMarker}, 3)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="green_blueMarker" />
@@ -176,18 +179,44 @@
 				<drawimage condition="not{new}++{watched}++{cutted}++eq({08_notNewWatchedCutted-recordingsMarker}, 8)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="turquoiseMarker" />
 				<drawimage condition="not{new}++{watched}++{cutted}++eq({08_notNewWatchedCutted-recordingsMarker}, 9)" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="yellowMarker" />
 			</area>
-			<areascroll condition="not{folder}++{02_showRecordingTime}" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="58%" width="34%" layer="4">
+			<areascroll condition="not{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="58%" width="34%" layer="4">
 				<drawtext x="3%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
-			<area condition="{folder}++{02_showRecordingTime}" x="40%" width="8%" layer="3">
+			<area condition="{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" x="40%" width="8%" layer="3">
 				<drawimage name="foldericon" imagetype="icon" path="ico_recfolder" x="0" width="{areawidth}" height="{areaheight}" valign="center" align="center"/>
 			</area>
-			<areascroll  condition="{folder}++{02_showRecordingTime}" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="58%" width="34%" layer="4">
+			<areascroll condition="{folder}++{02_showRecordingTime}++gt({00_numRecordingsmenuitems}, 4)" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="58%" width="34%" layer="4">
 				<drawtext x="2%" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{name}"/>
 			</areascroll>
+<!--Detailview-->
+			<area condition="eq({00_numRecordingsmenuitems}, 4)" x="2%" y="14%" width="98%" height="75%" layer="3">
+				<drawimage condition="not{current}" x="0" y="0" width="95%" height="100%" imagetype="skinpart" path="buttonRootTVG_ver" />
+				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="0" y="0%" width="95%" height="100%" imagetype="skinpart" path="buttonPlexActiveDetail" />
+				<drawimage condition="{current}++eq({coloredButtons}, 1)" x="0" y="0%" width="95%" height="100%" imagetype="skinpart" path="buttonPlexActiveDetailColor" />
+				<drawimage condition="{current}++eq({coloredButtons}, 2)" x="0" y="0%" width="95%" height="100%" imagetype="skinpart" path="buttonPlexCurrent_Gradient_ver" />
+			</area>
+			<area condition="eq({00_numRecordingsmenuitems}, 4)" x="2%" y="14%" width="98%" height="75%" layer="4">
+				<drawimage condition="{hasposter}" imagetype="image" path="{posterpath}" x="1%" y="7%" width="{areaheight}*0.8*0.68" height="{areaheight}*0.8" />
+				<drawimage condition="not{hasposter}" imagetype="skinpart" path="posterDummy" x="1%" y="7%" width="{areaheight}*0.8*0.68" height="{areaheight}*0.8" />
+				<drawimage condition="{folder}" imagetype="icon" path="ico_recfolderDetail" x="9%" y="15%" width="{areaheight}*0.8" height="{areaheight}*0.8" />
+
+				<drawtext name="name" condition="isset{shorttext}++not{folder}" x="9%" y="5%" width="75%" font="{semibold}" fontsize="17%" color="{clrLightGray}" text="{name} - {shorttext}" />
+				<drawtext condition="empty{shorttext}||{folder}" x="9%" y="5%" width="75%" font="{semibold}" fontsize="17%" color="{clrLightGray}" text="{name}" />
+				
+				<!--<drawtext condition="{folder}" x="9%" y="5%" width="75%" font="{semibold}" fontsize="16%" color="{clrLightGray}" text="{name}" />-->
+
+				<drawtextbox condition="not{folder}" x="9%" y="{posy(name)}+{height(name)}*1.3" width="83%" height="80%" font="{light}" fontsize="15%" color="{clrLightGray}" text="{description}" />
+
+				<drawtext condition="{folder}++eq({numrecordingsfolder}, 1)" x="18%" y="40%" width="30%" font="{semibold}" fontsize="18%" color="{clrLightGray}" text="{numrecordingsfolder} {tr(recording)}" />
+				<drawtext condition="{folder}++gt({numrecordingsfolder}, 1)" x="18%" y="40%" width="30%" font="{semibold}" fontsize="18%" color="{clrLightGray}" text="{numrecordingsfolder} {tr(recordings)}" />
+				<drawtext condition="{folder}++newrecordingsfolder" x="18%" y="59%" width="30%" font="{semibold}" fontsize="18%" color="{clrLightGray}" text="{newrecordingsfolder} {tr(new)}" />
+				
+				<drawrectangle condition="not{folder}++not{current}" x="1%" y="90%" width="{areaheight}*0.8*0.68*{percentseen}/100" height="2%" color="{clrHigh}" />
+				<drawrectangle condition="not{folder}++{current}" x="1%" y="90%" width="{areaheight}*0.8*0.68*{percentseen}/100" height="2%" color="{clrLightGray}" />
+			</area>
 		</listelement>
 
-		<currentelement delay="0" fadetime="0">
+		<currentelement condition="gt({00_numRecordingsmenuitems}, 4)" delay="0" fadetime="0">
 			<area condition="not{folder}" x="0" y="0" width="41%" height="60%" layer="3">
 				<drawtext name="title" x="0" y="0" width="100%" align="center" font="{light}" fontsize="12%" color="{clrLightGray}" text="{name}" />
 				<drawtext name="shorttext" x="0" y="{height(title)}" align="center" width="98%" font="{light}" fontsize="7%" color="{clrLightGray}" text="{shorttext}" />
@@ -196,14 +225,14 @@
 				<drawtextbox condition="not{hasposter}" x="2%" y="{posy(shorttext)}+{height(shorttext)}+20" width="94%" height="{areaheight} - {posy(poster)}" font="{light}" fontsize="7%" color="{clrLightGray}" text="{description}" />
 			</area>
 			<area condition="{folder}" x="0" y="0" width="40%" height="60%" layer="3">
-				<drawimage  x="0" y="1%" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="folder" />
+				<drawimage x="0" y="1%" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="folder" />
 			</area>
 			<area condition="{folder}++not{hasposter}" x="0" y="0" width="40%" height="60%" layer="4">
 				<drawtext condition="eq({numrecordingsfolder}, 1)" name="numrecordingsfolder" x="0" y="40%" align="center" width="100%" font="{light}" fontsize="12%" color="{clrLightGray}" text="{numrecordingsfolder} {tr(recording)}" />
 				<drawtext condition="gt({numrecordingsfolder}, 1)" name="numrecordingsfolder" x="0" y="40%" align="center" width="100%" font="{light}" fontsize="12%" color="{clrLightGray}" text="{numrecordingsfolder} {tr(recordings)}" />
 				<drawtext name="newrecordingsfolder" x="0" y="55%" align="center" width="100%" font="{light}" fontsize="12%" color="{clrLightGray}" text="{newrecordingsfolder} {tr(new)}" />
 			</area>
-			<area condition="{folder}++{hasposter}" x="17%" y="0" width="20%" height="60%" layer="4">				
+			<area condition="{folder}++{hasposter}" x="17%" y="0" width="20%" height="60%" layer="4">
 				<drawtext condition="eq({numrecordingsfolder}, 1)" name="numrecordingsfolder" x="0" y="40%" align="center" width="100%" font="{light}" fontsize="12%" color="{clrLightGray}" text="{numrecordingsfolder} {tr(recording)}" />
 				<drawtext condition="gt({numrecordingsfolder}, 1)++lt({numrecordingsfolder}, 99)" name="numrecordingsfolder" x="0" y="40%" align="center" width="100%" font="{light}" fontsize="12%" color="{clrLightGray}" text="{numrecordingsfolder} {tr(recordings)}" />
 				<drawtext name="newrecordingsfolder" condition="gt({numrecordingsfolder}, 1)++lt({numrecordingsfolder}, 99)" x="0" y="55%" align="center" width="100%" font="{light}" fontsize="12%" color="{clrLightGray}" text="{newrecordingsfolder} {tr(new)}" />
@@ -216,12 +245,12 @@
 			<area condition="{folder}++{hasposter}" x="0" y="0" width="40%" height="60%" layer="4">
 				<drawimage condition="{hasposter}" x="0" y="1%" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="posterFrame" />
 			</area>
-		</currentelement>        
+		</currentelement>
 	</menuitems>
 
 	<scrollbar>
 		<area condition="lt({height},1000)" x="95%" y="14%" width="5%" height="75%" layer="3">
-			 <drawimage   x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowScrollSub" />
+			 <drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowScrollSub" />
 			 <drawimage x="15%" y="{areaheight} * {offset} / 1000" width="{areawidth}*0.1" height="{areaheight} * {height} / 1000" imagetype="skinpart" path="scrollBar" />
 		</area>
 	</scrollbar>
