@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE displayreplay SYSTEM "../../../dtd/displayreplay.dtd">
 
-	<displayreplay x="0" y="0" width="100%" height="100%" fadetime="{menuFadeTime}" shifttime="{01_ShifttimeMessageDisplay}" shifttype="bottom" shiftmode="slowed">
+	<displayreplay x="0" y="0" width="100%" height="100%" fadetime="{00_menuFadeTime}" shifttime="{01_ShifttimeMessageDisplay}" shifttype="bottom" shiftmode="slowed">
 		<background>
 			<area x="0" y="75%" width="100%" height="25%" layer="1">
 				<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannel"/>
@@ -16,10 +16,10 @@
 	</backgroundmodeonly>
 
 	<scrapercontent>
-		<area condition="{isbanner}" x="1%" y="2%" width="{areaheight}*0.13*{mediawidth}/{mediaheight}" height="13%" layer="2">
+		<area condition="{isbanner}" x="11" y="64%" width="{areaheight}*0.1*{mediawidth}/{mediaheight}" height="10%" layer="2">
 			<drawimage imagetype="image" path="{mediapath}" align="center" valign="center"  width="{areawidth}" height="{areaheight}"/>
 		</area>
-		<area condition="not{isbanner}" x="1%" y="2%" width="{areaheight}*0.5*{mediawidth}/{mediaheight}" height="50%" layer="2">
+		<area condition="not{isbanner}" x="11" y="39%" width="{areaheight}*0.35*{mediawidth}/{mediaheight}" height="35%" layer="2">
 			<drawimage imagetype="image" path="{mediapath}" x="0" y="0" width="{areawidth}" height="{areaheight}"/>
 		</area>
 	</scrapercontent>
