@@ -193,3 +193,7 @@ shady-skin Revision History
 2015-06-02:
 
 - Small improvements plug-setup-skinpreview.xml
+
+2015-06-06:
+
+- Added detailview for displaymenurecordings
